--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -16,6 +12,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/event_refresh">
     <ListView
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/event_list">
