--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,39 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="none">
-        <!--<item-->
-            <!--android:id="@+id/nav_camera"-->
-            <!--android:icon="@drawable/ic_menu_camera"-->
-            <!--android:title="Import" />-->
-        <!--<item-->
-            <!--android:id="@+id/nav_gallery"-->
-            <!--android:icon="@drawable/ic_menu_gallery"-->
-            <!--android:title="Gallery" />-->
-        <!--<item-->
-            <!--android:id="@+id/nav_slideshow"-->
-            <!--android:icon="@drawable/ic_menu_slideshow"-->
-            <!--android:title="Slideshow" />-->
         <item
             android:id="@+id/go_to_browser"
             android:title="转到十一圈"
             android:icon="@drawable/ic_web_light_blue_300_18dp"/>
-        <!--<item-->
-            <!--android:id="@+id/nav_fav"-->
-            <!--android:icon="@drawable/ic_favorite"-->
-            <!--android:title="我的关注" />-->
-        <!--<item-->
-            <!--android:id="@+id/nav_manage"-->
-            <!--android:icon="@drawable/ic_settings"-->
-            <!--android:title="设置" />-->
+        <item
+            android:id="@+id/go_to_faved_events"
+            android:title="我收藏的活动"
+            android:icon="@drawable/ic_favorite_indicator"/>
+        <item
+            android:id="@+id/go_to_scan"
+            android:title="扫一扫"
+            android:icon="@drawable/ic_scan"/>
         <item
             android:id="@+id/go_to_about_me"
             android:title="关于作者"
             android:icon="@drawable/ic_me" />
 
-        <item
-            android:id="@+id/go_to_scan"
-            android:title="扫一扫"
-            android:icon="@drawable/ic_scan"/>
 
     </group>
 
