--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
     <include
         layout="@layout/app_bar_main"
+        android:id="@+id/son_app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
