Change resource file

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -59,4 +59,17 @@
     <item>@string/preferences_front_light_auto</item>
     <item>@string/preferences_front_light_off</item>
   </string-array>
+
+  <string-array name="club_square_category_names">
+    <item>全部</item>
+    <item>同好</item>
+    <item>流行文化</item>
+    <item>科技</item>
+    <item>传媒</item>
+    <item>体育</item>
+    <item>艺术</item>
+    <item>校园</item>
+    <item>慈善</item>
+    <item>其他</item>
+  </string-array>
 </resources>
