--- a/app/src/main/res/layout/activity_fav_event.xml
+++ b/app/src/main/res/layout/activity_fav_event.xml
@@ -23,6 +23,18 @@
         android:layout_alignParentTop="true"
         android:id="@+id/faved_event_search_box" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/faved_event_none_indicator"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:textSize="20sp"
+        android:text="@string/faved_event_no_fav"
+        android:visibility="gone"
+        />
+
     <ListView
         android:paddingLeft="10sp"
         android:paddingRight="10sp"
