--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ccoderad.bnds.shiyiquanevent.Activities.SplashScreen">
+    tools:context="ccoderad.bnds.shiyiquanevent.activities.SplashScreen">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
