--- a/app/src/main/res/layout/activity_club_info_detail.xml
+++ b/app/src/main/res/layout/activity_club_info_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ccoderad.bnds.shiyiquanevent.Activities.ClubInfoDetailActivity">
+    tools:context="ccoderad.bnds.shiyiquanevent.activities.ClubInfoDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/club_info_detail_appbar"
