--- a/app/src/main/res/layout/activity_club_square.xml
+++ b/app/src/main/res/layout/activity_club_square.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:padding="5sp"
-    tools:context="ccoderad.bnds.shiyiquanevent.Activities.ClubSquareActivity">
+    tools:context="ccoderad.bnds.shiyiquanevent.activities.ClubSquareActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -28,7 +28,7 @@
         android:id="@+id/club_square_fab"
         android:layout_margin="16sp"
         app:fabSize="normal"
-        app:layout_behavior="ccoderad.bnds.shiyiquanevent.Behaviors.ScrollFabBehavior"
+        app:layout_behavior="ccoderad.bnds.shiyiquanevent.behaviors.ScrollFabBehavior"
         android:layout_gravity="bottom|end" />
 
     <LinearLayout
