--- a/app/src/main/res/layout/activity_fav_event_search_result.xml
+++ b/app/src/main/res/layout/activity_fav_event_search_result.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="5sp"
     android:paddingEnd="5sp"
-    tools:context="ccoderad.bnds.shiyiquanevent.Activities.FavEventSearchResultActivity">
+    tools:context="ccoderad.bnds.shiyiquanevent.activities.FavEventSearchResultActivity">
 
     <ListView
         android:layout_width="match_parent"
