--- a/app/src/main/res/layout/activity_main_browser.xml
+++ b/app/src/main/res/layout/activity_main_browser.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/browser_relative"
-    tools:context=".Activities.MainBrowser"
+    tools:context=".activities.MainBrowser"
     tools:openDrawer="start">
 
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
