--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="10sp"
-    tools:context="ccoderad.bnds.shiyiquanevent.Activities.SettingActivity">
+    tools:context="ccoderad.bnds.shiyiquanevent.activities.SettingActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/setting_skip_splash"
