--- a/app/src/main/res/layout/content_about_me.xml
+++ b/app/src/main/res/layout/content_about_me.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Activities.about_me"
+    tools:context=".activities.AboutMeActivity"
     tools:showIn="@layout/activity_about_me">
 
     <LinearLayout
