--- a/app/src/main/res/layout/activity_open_source_info.xml
+++ b/app/src/main/res/layout/activity_open_source_info.xml
@@ -8,13 +8,13 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
-            android:padding="8sp"
-            android:textColor="#a9a7a7"
             android:layout_height="wrap_content"
+            android:padding="8sp"
             android:text="@string/open_source_info"
-            />
+            android:textColor="#a9a7a7" />
     </ScrollView>
 
 </FrameLayout>
