--- a/app/src/main/res/layout/club_list_header.xml
+++ b/app/src/main/res/layout/club_list_header.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorPrimary"
+    android:orientation="vertical"
     android:padding="4sp">
 
     <ImageView
         android:layout_width="128sp"
         android:layout_height="128sp"
-        android:src="@mipmap/logo"
-        android:paddingTop="20sp"/>
+        android:paddingTop="20sp"
+        android:src="@mipmap/logo" />
 
     <TextView
         android:layout_width="wrap_content"
