--- a/app/src/main/res/layout/update_info_header.xml
+++ b/app/src/main/res/layout/update_info_header.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/update_info_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="更新信息"
         android:padding="10sp"
-        android:textSize="25sp"
-        android:id="@+id/update_info_header_text" />
+        android:text="更新信息"
+        android:textSize="25sp" />
 
 </LinearLayout>
