--- a/app/src/main/res/layout-land/encode.xml
+++ b/app/src/main/res/layout-land/encode.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright (C) 2008 ZXing authors
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,38 +14,41 @@
  limitations under the License.
  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:fillViewport="true"
-              android:background="@color/encode_view"
-              android:orientation="horizontal"
-              android:gravity="center"
-              tools:ignore="Overdraw">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/encode_view"
+    android:fillViewport="true"
+    android:gravity="center"
+    android:orientation="horizontal"
+    tools:ignore="Overdraw">
 
-  <ImageView android:id="@+id/image_view"
-             android:layout_width="wrap_content"
-             android:layout_height="fill_parent"
-             android:layout_gravity="center_vertical"
-             android:scaleType="center"
-             tools:ignore="ContentDescription"/>
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:scaleType="center"
+        tools:ignore="ContentDescription" />
 
-  <ScrollView android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/contents_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:paddingBottom="8dip"
+            android:paddingRight="8dip"
+            android:paddingTop="8dip"
+            android:textColor="@color/contents_text"
+            android:textIsSelectable="true" />
 
-    <TextView android:id="@+id/contents_text_view"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center_vertical"
-              android:gravity="center"
-              android:textColor="@color/contents_text"
-              android:paddingRight="8dip"
-              android:paddingTop="8dip"
-              android:paddingBottom="8dip"
-              android:textIsSelectable="true"/>
-
-  </ScrollView>
+    </ScrollView>
 
 </LinearLayout>
