--- a/app/src/main/res/layout-land/share.xml
+++ b/app/src/main/res/layout-land/share.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright (C) 2008 ZXing authors
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,76 +14,81 @@
  limitations under the License.
  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:padding="8dip">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="8dip">
 
-  <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center"
-      android:text="@string/msg_share_explanation"
-      android:paddingBottom="12dip"
-      android:textIsSelectable="false"/>
-
-  <LinearLayout
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:paddingBottom="12dip">
-
-    <ImageView
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:scaleType="center"
-        android:src="@drawable/share_via_barcode"
-        android:paddingRight="24dip"
-        tools:ignore="ContentDescription"/>
+        android:gravity="center"
+        android:paddingBottom="12dip"
+        android:text="@string/msg_share_explanation"
+        android:textIsSelectable="false" />
 
     <LinearLayout
-        android:layout_width="0dip"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:paddingBottom="12dip">
 
-      <Button android:id="@+id/share_app_button"
-              style="@style/ShareButton"
-              android:text="@string/button_share_app"/>
-
-      <Button android:id="@+id/share_contact_button"
-              style="@style/ShareButton"
-              android:text="@string/button_share_contact"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-      <Button android:id="@+id/share_bookmark_button"
-              style="@style/ShareButton"
-              android:text="@string/button_share_bookmark"/>
-
-      <Button android:id="@+id/share_clipboard_button"
-              style="@style/ShareButton"
-              android:text="@string/button_share_clipboard"/>
-
-    </LinearLayout>
-
-  </LinearLayout>
-
-  <EditText android:id="@+id/share_text_view"
-            android:layout_width="fill_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/msg_share_text"
-            android:singleLine="true"
-            android:selectAllOnFocus="true"/>
+            android:layout_weight="1"
+            android:paddingRight="24dip"
+            android:scaleType="center"
+            android:src="@drawable/share_via_barcode"
+            tools:ignore="ContentDescription" />
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/share_app_button"
+                style="@style/ShareButton"
+                android:text="@string/button_share_app" />
+
+            <Button
+                android:id="@+id/share_contact_button"
+                style="@style/ShareButton"
+                android:text="@string/button_share_contact" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/share_bookmark_button"
+                style="@style/ShareButton"
+                android:text="@string/button_share_bookmark" />
+
+            <Button
+                android:id="@+id/share_clipboard_button"
+                style="@style/ShareButton"
+                android:text="@string/button_share_clipboard" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/share_text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/msg_share_text"
+        android:selectAllOnFocus="true"
+        android:singleLine="true" />
 
 </LinearLayout>
