--- a/app/src/main/res/layout/activity_fav_event.xml
+++ b/app/src/main/res/layout/activity_fav_event.xml
@@ -5,43 +5,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activities.FavEventActivity">
+
     <android.support.v7.widget.Toolbar
+        android:id="@+id/favd_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:id="@+id/favd_toolbar">
-    </android.support.v7.widget.Toolbar>
+        android:background="?attr/colorPrimary"></android.support.v7.widget.Toolbar>
 
     <com.quinny898.library.persistentsearch.SearchBox
+        android:id="@+id/faved_event_search_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_marginTop="-6dp"
-        android:layout_marginLeft="-6dp"
-        android:layout_marginRight="-6dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:id="@+id/faved_event_search_box" />
+        android:layout_marginLeft="-6dp"
+        android:layout_marginRight="-6dp"
+        android:layout_marginTop="-6dp"
+        android:visibility="gone" />
 
     <TextView
+        android:id="@+id/faved_event_none_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/faved_event_none_indicator"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:layout_centerInParent="true"
-        android:textSize="20sp"
+        android:layout_centerVertical="true"
         android:text="@string/faved_event_no_fav"
-        android:visibility="gone"
-        />
+        android:textSize="20sp"
+        android:visibility="gone" />
 
     <ListView
-        android:paddingLeft="10sp"
-        android:paddingRight="10sp"
         android:id="@+id/faved_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/favd_toolbar">
+        android:layout_below="@+id/favd_toolbar"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp">
 
     </ListView>
 
