--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/QR_Scanner"
@@ -32,27 +32,26 @@
         app:qrcv_tipTextColor="@android:color/white"
         app:qrcv_tipTextSize="12sp"
         app:qrcv_toolbarHeight="56dp"
-        app:qrcv_topOffset="90dp"
-        >
-    </cn.bingoogolapple.qrcode.zxing.ZXingView>
+        app:qrcv_topOffset="90dp"></cn.bingoogolapple.qrcode.zxing.ZXingView>
+
     <include layout="@layout/scanner_toolbar" />
 
     <Button
         android:id="@+id/Scanner_OpenLight"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="66dp"
-        android:text="打开闪光灯"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="66dp"
+        android:text="打开闪光灯" />
 
     <Button
         android:id="@+id/scanner_choose_photo"
         android:layout_width="140dp"
-        android:text="从相册选择二维码"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/Scanner_OpenLight"
         android:layout_alignStart="@+id/Scanner_OpenLight"
-        android:layout_marginTop="51dp" />
+        android:layout_alignTop="@+id/Scanner_OpenLight"
+        android:layout_marginTop="51dp"
+        android:text="从相册选择二维码" />
 
 </RelativeLayout>
