--- a/app/src/main/res/layout/alert_event_qr_share.xml
+++ b/app/src/main/res/layout/alert_event_qr_share.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/event_share_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/event_share_title"
-        android:textSize="20sp"
-        android:paddingTop="20sp"
         android:layout_gravity="center"
-        />
+        android:paddingTop="20sp"
+        android:textSize="20sp" />
 
     <ImageView
+        android:id="@+id/event_share_qr_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/event_share_qr_img"
-        android:paddingTop="10sp"
         android:layout_gravity="center"
-        />
+        android:paddingTop="10sp" />
 
 </LinearLayout>
