--- a/app/src/main/res/layout/club_chat_choice_list.xml
+++ b/app/src/main/res/layout/club_chat_choice_list.xml
@@ -5,8 +5,7 @@
     android:padding="4sp">
 
     <ListView
+        android:id="@+id/club_chat_choice_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/club_chat_choice_list">
-    </ListView>
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
