--- a/app/src/main/res/layout/club_list_item.xml
+++ b/app/src/main/res/layout/club_list_item.xml
@@ -31,8 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingTop="10sp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingTop="10sp">
 
 
                 <TextView
@@ -45,8 +45,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="身份:"
-                    android:paddingTop="8sp"/>
+                    android:paddingTop="8sp"
+                    android:text="身份:" />
 
                 <TextView
                     android:id="@+id/club_list_item_status"
