--- a/app/src/main/res/layout/club_square_header.xml
+++ b/app/src/main/res/layout/club_square_header.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10sp"
-    >
+    android:orientation="vertical"
+    android:padding="10sp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="搜索社团:" />
+            android:text="搜索社团:"
+            android:textSize="20sp" />
 
         <EditText
+            android:id="@+id/club_square_search_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/club_square_search_text"
-            android:textSize="15sp"
+            android:hint="输入社团名称"
             android:paddingLeft="2sp"
-            android:hint="输入社团名称" />
+            android:textSize="15sp" />
 
     </LinearLayout>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-       <Button
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/club_square_list_header_btn"
-           android:text="搜索!"
-           />
-   </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/club_square_list_header_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="搜索!" />
+    </LinearLayout>
 </LinearLayout>
