--- a/app/src/main/res/layout/content_about_me.xml
+++ b/app/src/main/res/layout/content_about_me.xml
@@ -20,19 +20,19 @@
             android:text="@string/large_text" />
 
         <android.support.v7.widget.CardView
-            android:paddingTop="100sp"
-            android:paddingStart="10sp"
-            android:paddingEnd="10sp"
             android:id="@+id/open_source_info_enter"
-            android:foreground="?attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="100sp">
+            android:layout_height="100sp"
+            android:foreground="?attr/selectableItemBackground"
+            android:paddingEnd="10sp"
+            android:paddingStart="10sp"
+            android:paddingTop="100sp">
 
             <TextView
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开源许可证"/>
+                android:layout_gravity="center"
+                android:text="开源许可证" />
 
         </android.support.v7.widget.CardView>
 
