--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,16 +7,17 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
+
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/event_refresh"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/event_refresh">
-    <ListView
-        android:paddingLeft="10sp"
-        android:paddingRight="10sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/event_list">
-    </ListView>
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/event_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="10sp"
+            android:paddingRight="10sp"></ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
