--- a/app/src/main/res/layout/event_alert_header.xml
+++ b/app/src/main/res/layout/event_alert_header.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2cc5ed"
-    >
+    android:background="#2cc5ed">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:padding="15sp"
         android:text="活动详情"
         android:textColor="#FFFFFF"
-        android:padding="15sp"/>
+        android:textSize="25sp" />
 
 </LinearLayout>
