--- a/app/src/main/res/layout/event_qr_share_header.xml
+++ b/app/src/main/res/layout/event_qr_share_header.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3fccd6">
+    android:background="#3fccd6"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="15sp"
         android:text="扫一扫前往活动页面"
         android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:padding="15sp"
-        />
+        android:textSize="25sp" />
 
 </LinearLayout>
