--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#4eadc4"
     android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/ic_logo"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@mipmap/logo_2" />
-
-    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20sp"
-        android:text="十一圈Event"
-        android:id="@+id/user_name_holder"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_height="230sp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/main_nav_header_bg"
+        />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Made By AD1024 \n反馈:yoyo991214@126.com" />
+        android:text="Made By AD1024 \n反馈:yoyo991214@126.com"
+        android:layout_marginTop="185sp"
+        android:layout_alignParentTop="true"
+        android:paddingLeft="20sp"
+        android:layout_alignStart="@+id/user_name_holder" />
 
-</LinearLayout>
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/ic_logo"
+        android:layout_width="120sp"
+        android:layout_height="120sp"
+        android:src="@mipmap/logo_2"
+        fresco:placeholderImage="@mipmap/logo_2"
+        fresco:roundAsCircle="true"
+        android:layout_marginLeft="20sp"
+        android:layout_marginStart="18dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="38sp" />
+
+    <TextView
+        android:id="@+id/user_name_holder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20sp"
+        android:text="十一圈Event"
+        android:paddingLeft="20sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="35sp" />
+
+
+</RelativeLayout>
