--- a/app/src/main/res/layout/update_info_msg.xml
+++ b/app/src/main/res/layout/update_info_msg.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10sp">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
+            android:id="@+id/update_info_msg"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/update_info_msg"/>
+            android:layout_height="match_parent" />
     </ScrollView>
 </LinearLayout>
