--- a/app/src/main/res/layout/activity_club_info_detail.xml
+++ b/app/src/main/res/layout/activity_club_info_detail.xml
@@ -27,6 +27,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#4f000000" />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
